thanks.html added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <main>
       <h1>Hello</h1>
 
-      <form name="contact" method="POST" data-netlify="true">
+      <form
+        action="/thanks.html"
+        name="contact"
+        method="POST"
+        data-netlify="true"
+      >
         <label for="name">First name</label>
         <input type="text" name="name" id="name" placeholder="your name" />
         <label for="age">Age</label>
